task2/k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: acme-corp-network-policy
  namespace: acme-corp
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    # Sirf DNS allow karo
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
          
    # Allow my DB:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: database
          podSelector:
            matchLabels:
              tenant: acme-corp
      ports:
        - port: 5432
          protocol: TCP
